--- a/app.json
+++ b/app.json
@@ -1,19 +1,18 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
-  "id": "com.enphase",
-  "version": "0.6.1",
-  "compatibility": ">=12.2.0",
-  "brandColor": "#F27321",
+  "id": "com.maikel.EnphaseIQBattery",
+  "version": "1.0.0",
+  "compatibility": ">=12.4.0",
   "sdk": 3,
   "platforms": [
     "local",
     "cloud"
   ],
   "name": {
-    "en": "Enphase"
+    "en": "EnphaseIQBattery"
   },
   "description": {
-    "en": "Harness the sun to make, use, save, and sell your own power."
+    "en": "Adds support for MyBrand devices."
   },
   "category": [
     "energy"
@@ -25,7 +24,7 @@
     "xlarge": "/assets/images/xlarge.png"
   },
   "author": {
-    "name": "Emile Nijssen",
+    "name": "Emile Nijssen & Maikel Van de Wouw",
     "email": "emile@athom.nl"
   },
   "support": "mailto:emile@athom.nl",
@@ -40,9 +39,9 @@
         "cloud"
       ],
       "images": {
-        "small": "/drivers/inverter/assets/images/small.png",
-        "large": "/drivers/inverter/assets/images/large.png",
-        "xlarge": "/drivers/inverter/assets/images/xlarge.png"
+        "small": "/drivers/inventer/assets/images/small.png",
+        "large": "/drivers/inventer/assets/images/large.png",
+        "xlarge": "/drivers/inventer/assets/images/xlarge.png"
       },
       "pair": [
         {
@@ -81,37 +80,157 @@
         }
       ],
       "name": {
-        "en": "Inverter"
+        "nl": "Enphase IQ Batterij",
+        "en": "Enphase IQ Battery"
       },
-      "class": "solarpanel",
+      "class": "other",
       "capabilities": [
-        "meter_power",
-        "meter_power.day"
+        "IQbat_solar_production",
+        "IQbat_grid_import",
+        "IQbat_charge",
+        "IQbat_discharge",
+        "IQbat_home",
+        "IQbat_export",
+        "IQbat_last_update",
+        "IQbat_level",
+        "IQbat_connectiontype",
+        "measure_battery"
       ],
       "capabilitiesOptions": {
-        "measure_power": {
-          "en": "Generated Power",
-          "nl": "Opgewekte energie",
-          "de": "Energieproduktion"
-        },
-        "meter_power": {
+        "IQbat_connectiontype": {
           "title": {
-            "en": "Generated Total",
-            "nl": "Opgewekt Totaal",
-            "de": "Energieproduktion Total"
-          }
-        },
-        "meter_power.day": {
-          "title": {
-            "en": "Generated Today",
-            "nl": "Opgewekt Vandaag",
-            "de": "Energieproduktion Heute"
+            "en": "Connection",
+            "nl": "Verbinding"
           }
         }
       },
-      "id": "inverter"
+      "capabilitiesConfig": {
+        "IQbat_level": {
+          "statusIndicator": true
+        }
+      },
+      "id": "inventer"
     }
   ],
+  "capabilities": {
+    "IQbat_charge": {
+      "id": "IQbat_charge",
+      "type": "number",
+      "title": {
+        "en": "Battery Charged",
+        "nl": "Batterij geladen"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "insights": true,
+      "units": "kWh",
+      "icon": "/assets/IQbat/IQbat_batteryplus.svg"
+    },
+    "IQbat_connectiontype": {
+      "id": "IQbat_connectiontype",
+      "type": "string",
+      "title": {
+        "en": "Connection Type",
+        "nl": "Verbindingstype"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "icon": "/assets/IQbat/IQbat_network.svg"
+    },
+    "IQbat_discharge": {
+      "id": "IQbat_discharge",
+      "type": "number",
+      "title": {
+        "en": "Battery Discharged",
+        "nl": "Batterij ontladen"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "insights": true,
+      "units": "kWh",
+      "icon": "/assets/IQbat/IQbat_batterymin.svg"
+    },
+    "IQbat_export": {
+      "id": "IQbat_export",
+      "type": "number",
+      "title": {
+        "en": "Export today",
+        "nl": "Energie verkocht"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "icon": "/assets/IQbat/IQbat_coins.svg"
+    },
+    "IQbat_grid_import": {
+      "id": "IQbat_grid_import",
+      "type": "number",
+      "title": {
+        "en": "Import today",
+        "nl": "Gekocht vandaag"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "icon": "/assets/IQbat/IQbat_powerline.svg"
+    },
+    "IQbat_home": {
+      "id": "IQbat_home",
+      "type": "number",
+      "title": {
+        "en": "Home consumption today",
+        "nl": "Verbruik vandaag"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "icon": "/assets/IQbat/IQbat_home.svg"
+    },
+    "IQbat_last_update": {
+      "id": "IQbat_last_update",
+      "type": "string",
+      "title": {
+        "en": "Last Update",
+        "nl": "Laatste update"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "icon": "assets/IQbat/IQbat_clock.svg"
+    },
+    "IQbat_level": {
+      "id": "IQbat_level",
+      "type": "number",
+      "title": {
+        "en": "Battery level",
+        "nl": "Batterij level"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "%",
+      "icon": "assets/IQbat/IQbat_battery.svg"
+    },
+    "IQbat_solar_production": {
+      "id": "IQbat_solar_production",
+      "type": "number",
+      "title": {
+        "en": "Solar production today",
+        "nl": "Zonnestroom vandaag"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "icon": "assets/IQbat/IQbat_sun.svg"
+    }
+  },
   "discovery": {
     "enphase-envoy": {
       "type": "mdns-sd",
