--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,29 @@
 {
-  "extends": "athom/homey-app"
+   "parserOptions": {
+      "ecmaVersion": 6
+   },
+   "env": {
+      "node": true
+   },
+   "extends": [
+      "eslint:recommended",
+      "airbnb-base",
+      "athom",
+      "plugin:prettier/recommended"
+   ],
+   "plugins": [
+      "prettier"
+   ],
+   "rules": {
+      "prettier/prettier": "error",
+      "no-console": [
+         "error",
+         {
+            "allow": [
+               "warn",
+               "error"
+            ]
+         }
+      ]
+   }
 }
