--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "com.enphase",
+  "name": "com.maikel.EnphaseIQBattery",
   "version": "1.0.0",
   "main": "app.js",
-  "scripts": {
-    "lint": "eslint --ext .js,.ts --ignore-path .gitignore ."
-  },
+  "scripts": {},
   "devDependencies": {
-    "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.10",
-    "eslint": "^7.32.0",
-    "eslint-config-athom": "^3.1.3"
+    "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.12"
   },
   "dependencies": {
     "node-fetch": "^3.3.2"
