--- a/app.json
+++ b/app.json
@@ -28,9 +28,116 @@
     "name": "Emile Nijssen",
     "email": "emile@athom.nl"
   },
+  "contributors": {
+    "developers": [
+      {
+        "name": "Emile Nijssen",
+        "email": "emile@athom.nl"
+      },
+      {
+        "name": "Maikel van de Wouw",
+        "email": "uknown"
+      }
+    ],
+    "translators": [
+      {
+        "name": "🇬🇧 Emile Nijssen"
+      },
+      {
+        "name": "🇳🇱 Emile Nijssen"
+      }
+    ]
+  },
   "support": "mailto:emile@athom.nl",
   "source": "https://github.com/WeeJeWel/com.enphase",
   "drivers": [
+    {
+      "platforms": [
+        "local",
+        "cloud"
+      ],
+      "connectivity": [
+        "cloud"
+      ],
+      "images": {
+        "small": "/drivers/IQbattery/assets/images/small.png",
+        "large": "/drivers/IQbattery/assets/images/large.png",
+        "xlarge": "/drivers/IQbattery/assets/images/xlarge.png"
+      },
+      "pair": [
+        {
+          "id": "login_credentials",
+          "template": "login_credentials",
+          "options": {
+            "logo": "logo.svg"
+          }
+        },
+        {
+          "id": "list_devices",
+          "template": "list_devices",
+          "navigation": {
+            "next": "add_devices"
+          }
+        },
+        {
+          "id": "add_devices",
+          "template": "add_devices"
+        }
+      ],
+      "settings": [
+        {
+          "id": "username",
+          "type": "text",
+          "label": {
+            "en": "Username"
+          }
+        },
+        {
+          "id": "password",
+          "type": "password",
+          "label": {
+            "en": "Password"
+          }
+        }
+      ],
+      "id": "IQbattery",
+      "name": {
+        "nl": "Enphase IQ Batterij",
+        "en": "Enphase IQ Battery"
+      },
+      "class": "other",
+      "capabilities": [
+        "IQbat_solar_production",
+        "IQbat_grid_import",
+        "IQbat_charge",
+        "IQbat_discharge",
+        "IQbat_home",
+        "IQbat_export",
+        "IQbat_last_update",
+        "IQbat_level",
+        "IQbat_connectiontype",
+        "measure_battery"
+      ],
+      "statusIndicator": "measure_battery",
+      "capabilitiesOptions": {
+        "IQbat_connectiontype": {
+          "title": {
+            "en": "Connection",
+            "nl": "Verbinding"
+          }
+        }
+      },
+      "capabilitiesConfig": {
+        "IQbat_level": {
+          "statusIndicator": true
+        }
+      },
+      "energy": {
+        "batteries": [
+          "OTHER"
+        ]
+      }
+    },
     {
       "platforms": [
         "local",
@@ -112,6 +219,130 @@
       "id": "inverter"
     }
   ],
+  "capabilities": {
+    "IQbat_charge": {
+      "id": "IQbat_charge",
+      "type": "number",
+      "title": {
+        "en": "Battery Charged",
+        "nl": "Batterij geladen"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "insights": true,
+      "units": "kWh",
+      "icon": "/assets/IQbat/IQbat_batteryplus.svg"
+    },
+    "IQbat_connectiontype": {
+      "id": "IQbat_connectiontype",
+      "type": "string",
+      "title": {
+        "en": "Connection Type",
+        "nl": "Verbindingstype"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "icon": "/assets/IQbat/IQbat_network.svg"
+    },
+    "IQbat_discharge": {
+      "id": "IQbat_discharge",
+      "type": "number",
+      "title": {
+        "en": "Battery Discharged",
+        "nl": "Batterij ontladen"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "insights": true,
+      "units": "kWh",
+      "icon": "/assets/IQbat/IQbat_batterymin.svg"
+    },
+    "IQbat_export": {
+      "id": "IQbat_export",
+      "type": "number",
+      "title": {
+        "en": "Export today",
+        "nl": "Energie verkocht"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "icon": "/assets/IQbat/IQbat_coins.svg"
+    },
+    "IQbat_grid_import": {
+      "id": "IQbat_grid_import",
+      "type": "number",
+      "title": {
+        "en": "Import today",
+        "nl": "Gekocht vandaag"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "icon": "/assets/IQbat/IQbat_powerline.svg"
+    },
+    "IQbat_home": {
+      "id": "IQbat_home",
+      "type": "number",
+      "title": {
+        "en": "Home consumption today",
+        "nl": "Verbruik vandaag"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "icon": "/assets/IQbat/IQbat_home.svg"
+    },
+    "IQbat_last_update": {
+      "id": "IQbat_last_update",
+      "type": "string",
+      "title": {
+        "en": "Last Update",
+        "nl": "Laatste update"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "icon": "assets/IQbat/IQbat_clock.svg"
+    },
+    "IQbat_level": {
+      "id": "IQbat_level",
+      "type": "number",
+      "title": {
+        "en": "Battery level",
+        "nl": "Batterij level"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "statusIndicator": "IQbat_level",
+      "units": "%",
+      "uiQuickAction": false,
+      "insights": true,
+      "decimals": 0,
+      "icon": "assets/IQbat/IQbat_battery.svg"
+    },
+    "IQbat_solar_production": {
+      "id": "IQbat_solar_production",
+      "type": "number",
+      "title": {
+        "en": "Solar production today",
+        "nl": "Zonnestroom vandaag"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "insights": true,
+      "icon": "assets/IQbat/IQbat_sun.svg"
+    }
+  },
   "discovery": {
     "enphase-envoy": {
       "type": "mdns-sd",
