--- a/app.json
+++ b/app.json
@@ -194,6 +194,130 @@
       }
     }
   ],
+  "capabilities": {
+    "iqbattery_charge": {
+      "id": "iqbattery_charge",
+      "type": "number",
+      "title": {
+        "en": "Battery Charged",
+        "nl": "Batterij geladen"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "insights": true,
+      "units": "kWh",
+      "icon": "/assets/IQbat/iqbattery_batteryplus.svg"
+    },
+    "iqbattery_connectiontype": {
+      "id": "iqbattery_connectiontype",
+      "type": "string",
+      "title": {
+        "en": "Connection Type",
+        "nl": "Verbindingstype"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "icon": "/assets/IQbat/iqbattery_network.svg"
+    },
+    "iqbattery_discharge": {
+      "id": "iqbattery_discharge",
+      "type": "number",
+      "title": {
+        "en": "Battery Discharged",
+        "nl": "Batterij ontladen"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "insights": true,
+      "units": "kWh",
+      "icon": "/assets/IQbat/iqbattery_batterymin.svg"
+    },
+    "iqbattery_export": {
+      "id": "iqbattery_export",
+      "type": "number",
+      "title": {
+        "en": "Export today",
+        "nl": "Energie verkocht"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "icon": "/assets/IQbat/iqbattery_coins.svg"
+    },
+    "iqbattery_grid_import": {
+      "id": "iqbattery_grid_import",
+      "type": "number",
+      "title": {
+        "en": "Import today",
+        "nl": "Gekocht vandaag"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "icon": "/assets/IQbat/iqbattery_powerline.svg"
+    },
+    "iqbattery_home": {
+      "id": "iqbattery_home",
+      "type": "number",
+      "title": {
+        "en": "Home consumption today",
+        "nl": "Verbruik vandaag"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "icon": "/assets/IQbat/iqbattery_home.svg"
+    },
+    "iqbattery_last_update": {
+      "id": "iqbattery_last_update",
+      "type": "string",
+      "title": {
+        "en": "Last Update",
+        "nl": "Laatste update"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "icon": "/assets/IQbat/iqbattery_clock.svg"
+    },
+    "iqbattery_level": {
+      "id": "iqbattery_level",
+      "type": "number",
+      "title": {
+        "en": "Battery level",
+        "nl": "Batterij level"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "statusIndicator": "iqbattery_level",
+      "units": "%",
+      "uiQuickAction": false,
+      "insights": true,
+      "decimals": 0,
+      "icon": "/assets/IQbat/iqbattery_battery.svg"
+    },
+    "iqbattery_solar_production": {
+      "id": "iqbattery_solar_production",
+      "type": "number",
+      "title": {
+        "en": "Solar production today",
+        "nl": "Zonnestroom vandaag"
+      },
+      "getable": true,
+      "setable": false,
+      "uiComponent": "sensor",
+      "units": "kWh",
+      "insights": true,
+      "icon": "/assets/IQbat/iqbattery_sun.svg"
+    }
+  },
   "discovery": {
     "enphase-envoy": {
       "type": "mdns-sd",
