--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -28,5 +28,12 @@
     "email": "emile@athom.nl"
   },
   "support": "mailto:emile@athom.nl",
-  "source": "https://github.com/WeeJeWel/com.enphase"
+  "source": "https://github.com/WeeJeWel/com.enphase",
+  "contributors": {
+    "developers": [
+      {
+        "name": "Maikel van de Wouw"
+      }
+    ]
+  }
 }
