--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.enphase",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "compatibility": ">=12.2.0",
   "brandColor": "#F27321",
   "sdk": 3,
@@ -30,6 +30,13 @@
   },
   "support": "mailto:emile@athom.nl",
   "source": "https://github.com/WeeJeWel/com.enphase",
+  "contributors": {
+    "developers": [
+      {
+        "name": "Maikel van de Wouw"
+      }
+    ]
+  },
   "drivers": [
     {
       "platforms": [
